--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "ngx-order-pipe": "^1.0.3",
+    "ngx-pagination": "^3.0.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
